[package]
name = "dpdk-sys"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Rust bindings for DPDK"
repository = "https://github.com/datenlord/dpdk-sys"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60"
cc = "1.0"
pkg-config = "0.3.25"
